--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                  
                 </div>
             <p>Liked by <strong>4GeeksAcademy, HTML, Web</strong> and <strong>100.000 others</strong></p>
-            <p>La princesa Zelda (ゼルダ Zeruda) es un personaje de la serie de videojuegos The Legend of Zelda de Nintendo. Ella fue creada por Shigeru Miyamoto para el juego original de 1986 The Legend of Zelda. Como uno de los personajes centrales de la serie, ha aparecido en la mayoría de los juegos en varias encarnaciones. Zelda es la princesa hyliana con apariencia de elfo del reino de Hyrule, asociada del protagonista de la serie Link y portadora de la Trifuerza de la Sabiduría.</p>
+            <p>La princesa Zelda (ゼルダ Zeruda) es un personaje de la serie de videojuegos The Legend of Zelda de Nintendo. Ella fue creada por Shigeru Miyamoto para el juego original de 1986 The Legend of Zelda. Como uno de los personajes centrales de la serie, ha aparecido en la mayoría de los juegos en varias encarnaciones. Zelda es la princesa hyliana con apariencia de elfo del reino de Hyrule, asociada del protagonista de la serie Link y portadora de la Trifuerza de la Sabiduría..</p>
             </div>
         </div>
     </div>
